Added relationship one to many for users and posts