@@ -8,6 +8,8 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.FieldError;
 import restful.api.SocialMediaApi.dto.post.PostDTO;
+import restful.api.SocialMediaApi.dto.post.PostPatchDTO;
+import restful.api.SocialMediaApi.dto.post.PostResponseDTO;
 import restful.api.SocialMediaApi.exceptions.PostNotFoundException;
 import restful.api.SocialMediaApi.mappers.PostMapper;
 import restful.api.SocialMediaApi.models.Post;
@@ -15,6 +17,7 @@ import restful.api.SocialMediaApi.repositories.PostRepository;
 import restful.api.SocialMediaApi.validators.PostValidator;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -23,46 +26,56 @@ public class PostService {
     private final PostValidator postValidator;
     private PostRepository postRepository;
 
-    public ResponseEntity<PostDTO> findById(Long id) {
+    public ResponseEntity<PostResponseDTO> findById(Long id) {
         Post post = postRepository.findById(id).orElseThrow(() -> new PostNotFoundException("Post with this id not found"));
-        PostDTO postDTO = postMapper.toDTO(post);
 
-        return ResponseEntity.ok(postDTO);
+        return ResponseEntity.ok(postMapper.toPostResponseDTO(post));
     }
 
-    public List<PostDTO> findAll() {
+    public List<PostResponseDTO> findAll() {
         List<Post> posts = postRepository.findAll();
-
-        return posts.stream().map(postMapper::toDTO).toList();
+        return posts.stream().map(postMapper::toPostResponseDTO).collect(Collectors.toList());
     }
 
     @Transactional
-    public Post save(PostDTO postDTO, BindingResult bindingResult) {
-        Post post = postMapper.toPost(postDTO);
-        postValidator.validate(post, bindingResult);
+    public PostResponseDTO save(PostDTO postDTO, BindingResult bindingResult) {
+
+        postValidator.validate(postMapper.toPost(postDTO), bindingResult);
 
         //выбросится ошибка и не сохранит в бд
         PostValidator.bindingResultValidation(bindingResult);
+        Post post = postMapper.toPost(postDTO);
+        postRepository.save(post);
 
-            return postRepository.save(post);
+        return postMapper.toPostResponseDTO(post);
 
     }
 
     @Transactional
-    public Post update(Long id, PostDTO postDTO, BindingResult bindingResult) {
+    public PostResponseDTO update(Long id, PostPatchDTO postPatchDTO, BindingResult bindingResult) {
+        Post newPost = postMapper.toPostFromPostPatchDTO(postPatchDTO);
+
+        postValidator.validate(newPost, bindingResult);
         PostValidator.bindingResultValidation(bindingResult);
 
-        //выбросится ошибка и не обновит в бд
-        Post post = postMapper.toPost(postDTO);
-        post.setId(id);
 
-        return postRepository.save(post);
+        Post updatedPost = postRepository.findById(id).orElseThrow(() -> new PostNotFoundException("Post with this id not found"));
+
+        //выбросится ошибка и не обновит в бд
+
+        newPost.setId(id);
+
+        newPost.setUser(updatedPost.getUser());
+
+        postRepository.save(newPost);
+
+        return postMapper.toPostResponseDTO(newPost);
     }
 
     @Transactional
-    public Post delete(Long id) {
+    public PostResponseDTO delete(Long id) {
         Post post = postRepository.findById(id).orElseThrow(() -> new PostNotFoundException("Post with this id not found"));
         postRepository.deleteById(id);
-        return post;
+        return postMapper.toPostResponseDTO(post);
     }
 }
